--- a/Assets/Game/Scripts/Shared/Game.Shared.asmdef
+++ b/Assets/Game/Scripts/Shared/Game.Shared.asmdef
@@ -2,7 +2,11 @@
     "name": "Game.Shared",
     "rootNamespace": "Game.Shared",
     "references": [
-        "GUID:fdd57787ea9e708429ad1efbe3afa37a"
+        "GUID:fdd57787ea9e708429ad1efbe3afa37a",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:593a5b492d29ac6448b1ebf7f035ef33",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
