--- a/Assets/Game/Scripts/Client/Game.Client.asmdef
+++ b/Assets/Game/Scripts/Client/Game.Client.asmdef
@@ -12,7 +12,8 @@
         "GUID:593a5b492d29ac6448b1ebf7f035ef33",
         "GUID:029c1c1b674aaae47a6841a0b89ad80e",
         "GUID:1f64149c8a9c143478aad40aabb80ddb",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "RuntimeAssembly"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
