--- a/Assets/Game/Scripts/Client/Game.Client.asmdef
+++ b/Assets/Game/Scripts/Client/Game.Client.asmdef
@@ -13,7 +13,10 @@
         "GUID:029c1c1b674aaae47a6841a0b89ad80e",
         "GUID:1f64149c8a9c143478aad40aabb80ddb",
         "GUID:4307f53044263cf4b835bd812fc161a4",
-        "RuntimeAssembly"
+        "GUID:7b1a8d9f4355a214f9a95471fa510c86",
+        "GUID:5e0b455853cd340e0813387221dfd501",
+        "GUID:fe25561d224ed4743af4c60938a59d0b",
+        "GUID:70ea675efa2644cef98c7ece24158333"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
